# kana2phone

./: Cargo.toml  LICENSE  README.md
src/: dictionary.rs  lib.rs  main.rs
